Create an export map

--- a/package.json
+++ b/package.json
@@ -2,8 +2,22 @@
   "name": "ajv",
   "version": "8.0.1",
   "description": "Another JSON Schema Validator",
-  "main": "dist/ajv.js",
-  "types": "dist/ajv.d.ts",
+  "main": "./dist/ajv.js",
+  "types": "./dist/ajv.d.ts",
+  "exports": {
+    ".": "./dist/ajv.js",
+    "./dist/2019": "./dist/2019.js",
+    "./dist/2020": "./dist/2020.js",
+    "./dist/jtd": "./dist/jtd.js",
+    "./dist/2019": "./dist/2019.js",
+    "./dist/runtime/equal": "./dist/runtime/equal.js",
+    "./dist/runtime/parseJson": "./dist/runtime/parseJson.js",
+    "./dist/runtime/quote": "./dist/runtime/quote.js",
+    "./dist/runtime/timestamp": "./dist/runtime/timestamp.js",
+    "./dist/runtime/ucs2length": "./dist/runtime/ucs2length.js",
+    "./dist/runtime/validation_error": "./dist/runtime/validation_error.js",
+    "./package.json": "./package.json"
+  },
   "files": [
     "lib/",
     "dist/",
