--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   },
   "devDependencies": {
     "@ajv-validator/config": "^0.3.0",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.0.27",
